# compile-time-regex

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: d151y0dxv57yhka6w1bw1c5g4lcvcsn1-source  fmlpd73vjlhfj0fy4l0nqzh4gk0q1q24-source  mkclb2h4khircsldp4ijyx3p8g6xpwqd-source  vjs6swcknw3l7qz9hnvy23dzn480admz-source
bench/: Cargo.toml
bench/benches/: all.rs  simd.rs
bench/src/: lib.rs
internal/: Cargo.toml
internal/src/: haystack.rs  hir.rs  lib.rs  matcher.rs  regex.rs
internal/src/codegen/: args.rs  captures.rs  mod.rs  regex.rs
internal/src/codegen/convert_hir/: groups.rs  into_matcher.rs  item.rs  mod.rs  test.rs
internal/src/codegen/create_type/: capture.rs  mod.rs  parse.rs  regex.rs
internal/src/expr/: anon.rs  capture.rs  captures.rs  coverage.md  iter.rs  mod.rs  regex.rs  test.rs
internal/src/general/: capture.rs  mod.rs  regex.rs  test.rs
internal/src/haystack/: bytes.rs  hay.rs  indexer.rs  interface.rs  item.rs  iter.rs  mod.rs  string.rs  test.rs  util.rs
internal/src/haystack/ext/: arcstr.rs  bstr.rs  ecow.rs  hipstr.rs  mod.rs
internal/src/haystack/tests/: item.rs  mod.rs  string.rs
internal/src/hir/: groups.rs  mod.rs  test.rs  util.rs  write_matcher.rs  write_type_expr.rs
internal/src/matcher/: capture.rs  composite.rs  helper.rs  interface.rs  lazy.rs  mod.rs  primitive.rs  quanitfier.rs  quantifier.rs  test.rs  tests.rs
internal/src/matcher/tests/: capture.rs  composite.rs  lazy.rs  mod.rs  primitive.rs  quantifier.rs
internal/src/traits/: mod.rs  regex.rs  test.rs
internal/src/util/: mod.rs
internal/src/util/cons_tree/: cons.rs  iter.rs  mod.rs  test.rs
macro/: Cargo.toml
macro/src/: args.rs  codegen.rs  lib.rs
regex/src/: haystack.rs  hir.rs  regex.rs
src/: demo.rs  haystack.rs  hir.rs  iter.rs  lib.rs  main.rs  matcher.rs
src/demo/: mod.rs
src/tests/: captures.rs  codegen.rs  contains_find.rs  macro-codegen.rs  macro-matches.rs  matches.rs  mod.rs
