[workspace]
members = ["internal", "macro"]

[package]
name = "ct-regex"
version = "0.1.0"
edition = "2024"

[dependencies]
ct-regex-internal = { path = "internal" }
ct-regex-macro = { path = "macro"}
arcstr = { version = "1.2.0", optional = true }
bstr = { version = "1.12.1", optional = true }
hipstr = { version = "0.8.0", optional = true }
ecow = { version = "0.2.6", optional = true }

[features]
default = []
demo = []
arcstr = ["dep:arcstr", "ct-regex-internal/arcstr"]
bstr = ["dep:bstr", "ct-regex-internal/bstr"]
ecow = ["dep:ecow", "ct-regex-internal/ecow"]
hipstr = ["dep:hipstr", "ct-regex-internal/hipstr"]
