[package]
name = "ct-regex-internal"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex-syntax = "0.8.9"
syn = "2.0.117"
standard-lib = { git = "https://github.com/Inferno214221/standard-lib.git", features = ["cons"] }
arcstr = { version = "1.2.0", optional = true }
bstr = { version = "1.12.1", optional = true }
hipstr = { version = "0.8.0", optional = true }

[features]
default = []
arcstr = ["dep:arcstr"]
bstr = ["dep:bstr"]
hipstr = ["dep:hipstr"]
