[package]
name = "ct-regex-macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
litrs = { version = "1.0.0", features = ["proc-macro2"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"
ct-regex-internal ={ path = "../internal" }
regex-automata = "0.4.14"
regex-syntax = "0.8.9"
